--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 <body>
 
 <div id="game"></div>
-<script>
-    var game = new Phaser.Game( 288, 505, Phaser.AUTO, 'game'); // 实例化一个Phaser的游戏实例
-</script>
+<script src="js/main.js"></script>
 
 </body>
 </html>
