--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <title>flappy bird</title>
     <meta name=viewport" content="width=device-width, initial-scale=1.0"/>
     <script src="js/phaser.js"></script>
+    <style>
+        #game {
+            margin: 0 auto;
+            width: 320px;
+        }
+    </style>
 </head>
 <body>
 
