--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8"/>
     <title>flappy bird</title>
     <meta name=viewport" content="width=device-width, initial-scale=1.0"/>
-    <script src="js/phaser.js"></script>
     <style>
-        #game {
+        body,p,div {
+            margin: 0; padding: 0;
+        }
+        canvas {
             margin: 0 auto;
-            width: 320px;
         }
     </style>
+    <script src="js/phaser.js"></script>
 </head>
 <body>
-
 <div id="game"></div>
 <script src="js/main.js"></script>
-
 </body>
 </html>
