use phaser.min.js

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8"/>
     <title>flappy bird</title>
     <meta name=viewport" content="width=device-width, initial-scale=1.0"/>
+    <!-- build:css css/combined.css -->
+    <!-- endbuild -->
     <style>
         body,p,div {
             margin: 0; padding: 0;
@@ -12,10 +14,12 @@
             margin: 0 auto;
         }
     </style>
-    <script src="js/phaser.js"></script>
 </head>
 <body>
 <div id="game"></div>
+<!-- build:js scripts/combined.js -->
+<script src="js/phaser.min.js"></script>
 <script src="js/main.js"></script>
+<!-- endbuild -->
 </body>
 </html>
