背景改为480*700，GAP=200，SPEED=250，GROUND_HEIGHT=40

--- a/index.html
+++ b/index.html
@@ -3,22 +3,16 @@
 <head>
     <meta charset="UTF-8"/>
     <title>flappy bird</title>
-    <meta name=viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, user-scalable=no">
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <!-- build:css css/combined.css -->
+    <link rel="stylesheet" href="css/main.css" />
     <!-- endbuild -->
-    <style>
-        body,p,div {
-            margin: 0; padding: 0;
-        }
-        canvas {
-            margin: 0 auto;
-        }
-    </style>
 </head>
 <body>
 <div id="game"></div>
 <!-- build:js scripts/combined.js -->
-<script src="js/phaser.min.js"></script>
+<script src="js/phaser.js"></script>
 <script src="js/main.js"></script>
 <!-- endbuild -->
 </body>
