动态确定menu下xueqian对title的位置

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8"/>
-    <title>flappy qian</title>
+    <title>flappy-qian</title>
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <!-- build:css css/combined.css -->
