--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <title>flappy-qian</title>
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" media="screen" />
     <!-- build:css css/combined.css -->
     <link rel="stylesheet" href="css/main.css" />
     <!-- endbuild -->
