--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <title>flappy-qian</title>
-    <meta name="viewport" content="width=device-width, user-scalable=no">
+    <meta name="viewport" contegulpnt="width=device-width, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" media="screen" />
     <!-- build:css css/combined.css -->
