--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 <body>
 <div id="game"></div>
 <!-- build:js scripts/combined.js -->
-<script src="js/phaser.min.js"></script>
+<script src="js/phaser.js"></script>
 <script src="js/main.js"></script>
 <!-- endbuild -->
 </body>
