--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8"/>
-    <title>flappy-qian</title>
+    <title>btllcyq</title>
     <meta name="viewport" contegulpnt="width=device-width, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" media="screen" />
@@ -13,7 +13,7 @@
 <body>
 <div id="game"></div>
 <!-- build:js scripts/combined.js -->
-<script src="js/phaser.js"></script>
+<script src="js/phaser.min.js"></script>
 <script src="js/main.js"></script>
 <!-- endbuild -->
 </body>
