--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8"/>
-    <title>btllcyq</title>
+    <title>btllcxq</title>
     <meta name="viewport" contegulpnt="width=device-width, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" media="screen" />
@@ -15,6 +15,7 @@
 <!-- build:js scripts/combined.js -->
 <script src="js/phaser.min.js"></script>
 <script src="js/main.js"></script>
+<script src="js/zepto.js"></script>
 <!-- endbuild -->
 </body>
 </html>
